// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`portable stories Button/Disabled 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#E4EBE6",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#8A9B92",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "fontWeight": "700",
              "lineHeight": 24,
            },
          ]
        }
      >
        Continue
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Button/FullWidth 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#1F7A4C",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 16,
            "width": "100%",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "fontWeight": "700",
              "lineHeight": 24,
            },
          ]
        }
      >
        Full width
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Button/Primary 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#1F7A4C",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "fontWeight": "700",
              "lineHeight": 24,
            },
          ]
        }
      >
        Continue
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Button/Secondary 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#D7E6DC",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#1F7A4C",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "fontWeight": "700",
              "lineHeight": 24,
            },
          ]
        }
      >
        Continue
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Button/Transparent 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#1F7A4C",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "fontWeight": "700",
              "lineHeight": 24,
            },
          ]
        }
      >
        Continue
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Card/Empty 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#E6EEE9",
          "borderRadius": 8,
          "minHeight": 32,
          "padding": 8,
          "width": "100%",
        },
      ]
    }
  />
</RNCSafeAreaProvider>
`;

exports[`portable stories Card/WithBody 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#E6EEE9",
          "borderRadius": 8,
          "minHeight": 32,
          "padding": 8,
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#13241C",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
        ]
      }
    >
      Card body
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Container/Default 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F4F7F5",
          "flex": 1,
          "width": "100%",
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 47,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "paddingHorizontal": 24,
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "width": "100%",
              },
              {
                "paddingBottom": 34,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#13241C",
                  "fontFamily": "Inter-Bold",
                  "fontSize": 16,
                  "fontWeight": "700",
                  "lineHeight": 24,
                },
              ]
            }
          >
            Default container
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Container/Scrolling 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F4F7F5",
          "flex": 1,
          "width": "100%",
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "paddingHorizontal": 24,
              "width": "100%",
            },
          ]
        }
      >
        <RCTScrollView
          contentContainerStyle={
            {
              "flexGrow": 1,
              "paddingBottom": 34,
            }
          }
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="handled"
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <Text
              style={
                [
                  {
                    "color": "#13241C",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Scroll body
            </Text>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Container/WithFooter 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F4F7F5",
          "flex": 1,
          "width": "100%",
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 47,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "paddingHorizontal": 24,
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "width": "100%",
              },
              {
                "paddingBottom": 0,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#13241C",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "fontWeight": "500",
                  "lineHeight": 16,
                },
              ]
            }
          >
            Body
          </Text>
        </View>
        <View
          style={
            [
              {
                "paddingTop": 12,
                "width": "100%",
              },
              {
                "paddingBottom": 34,
              },
            ]
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#1F7A4C",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "padding": 16,
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-Bold",
                      "fontSize": 16,
                      "fontWeight": "700",
                      "lineHeight": 24,
                    },
                  ]
                }
              >
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Container/WithoutSafeArea 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F4F7F5",
          "flex": 1,
          "width": "100%",
        },
        {
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
              "paddingHorizontal": 24,
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
                "width": "100%",
              },
              {
                "paddingBottom": 0,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#13241C",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "fontWeight": "500",
                  "lineHeight": 16,
                },
              ]
            }
          >
            Tab screen
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Header/TitleOnly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F4F7F5",
          "width": "100%",
        },
        {
          "paddingTop": 47,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 24,
            "paddingVertical": 12,
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#13241C",
                "fontFamily": "Inter-Bold",
                "fontSize": 16,
                "fontWeight": "700",
                "lineHeight": 24,
              },
            ]
          }
        >
          Home
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Header/WithBack 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#F4F7F5",
          "width": "100%",
        },
        {
          "paddingTop": 47,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 24,
            "paddingVertical": 12,
            "width": "100%",
          },
        ]
      }
    >
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          color="#13241C"
          name="chevron-back"
          size={24}
        />
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#13241C",
                "fontFamily": "Inter-Bold",
                "fontSize": 16,
                "fontWeight": "700",
                "lineHeight": 24,
              },
            ]
          }
        >
          Register
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Section/DefaultGap 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#13241C",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 12,
            "fontWeight": "600",
            "lineHeight": 16,
          },
        ]
      }
    >
      First row
    </Text>
    <Text
      style={
        [
          {
            "color": "#13241C",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
        ]
      }
    >
      Second row
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Section/WithSpacer 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 0,
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#13241C",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
        ]
      }
    >
      No gap
    </Text>
    <View
      style={
        [
          {
            "height": 24,
            "width": "100%",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "#13241C",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          },
        ]
      }
    >
      After spacer
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories Text/Heading 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#13241C",
          "fontFamily": "Inter-Bold",
          "fontSize": 16,
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    The quick brown fox
  </Text>
</RNCSafeAreaProvider>
`;

exports[`portable stories Text/HeadingSecondary 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#5C7268",
          "fontFamily": "Inter-Bold",
          "fontSize": 16,
          "fontWeight": "700",
          "lineHeight": 24,
        },
      ]
    }
  >
    The quick brown fox
  </Text>
</RNCSafeAreaProvider>
`;

exports[`portable stories Text/Medium 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#5C7268",
          "fontFamily": "Inter-Medium",
          "fontSize": 12,
          "fontWeight": "500",
          "lineHeight": 16,
          "textAlign": "center",
        },
      ]
    }
  >
    The quick brown fox
  </Text>
</RNCSafeAreaProvider>
`;

exports[`portable stories Text/SemiBold 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#13241C",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        },
      ]
    }
  >
    The quick brown fox
  </Text>
</RNCSafeAreaProvider>
`;

exports[`portable stories TextField/Email 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 8,
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#13241C",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 12,
            "fontWeight": "600",
            "lineHeight": 16,
          },
        ]
      }
    >
      Email
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#E6EEE9",
            "borderRadius": 8,
            "overflow": "hidden",
            "width": "100%",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="Email"
        autoCapitalize="none"
        autoCorrect={false}
        keyboardType="email-address"
        onChangeText={[MockFunction spy]}
        placeholder="you@example.com"
        placeholderTextColor="#5C7268"
        style={
          {
            "color": "#13241C",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "lineHeight": 16,
            "padding": 16,
          }
        }
      />
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`portable stories TextField/Password 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 8,
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#13241C",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 12,
            "fontWeight": "600",
            "lineHeight": 16,
          },
        ]
      }
    >
      Password
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#E6EEE9",
            "borderRadius": 8,
            "overflow": "hidden",
            "width": "100%",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="Password"
        autoCapitalize="none"
        autoCorrect={false}
        defaultValue="secret"
        onChangeText={[MockFunction spy]}
        placeholder="••••••••"
        placeholderTextColor="#5C7268"
        secureTextEntry={true}
        style={
          {
            "color": "#13241C",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "lineHeight": 16,
            "padding": 16,
          }
        }
      />
    </View>
  </View>
</RNCSafeAreaProvider>
`;
